# stock-monitor-monorepo

./: .gitignore  Makefile  docker-compose.yml
calculator/: pyproject.toml
calculator/calculator/: main.py  math.py
calculator/tests/: test_math.py
cot-client/: Dockerfile  pyproject.toml
cot-client/cot_client/: __main__.py  downloader.py  header.py
crm/: Dockerfile  pyproject.toml
crm/crm/: __main__.py
etl/: Dockerfile  entrypoint.sh  pyproject.toml
etl/etl/: consumers.py  cot_consumers.py  features.py  math.py  monitor.py  notifyer.py  rules.py  utils.py
etl/etl/telegram/: client.py
etl/tests/: test_operators.py
frontend/: Dockerfile  pyproject.toml
frontend/.streamlit/: secrets.toml
frontend/frontend/: cot.py  ideas.py  utils.py
frontend/tests/: test_utils.py
interavtive-data-consumer/: pyproject.toml
interavtive-data-consumer/interavtive_data_consumer/: flow.py
interface/: pyproject.toml
interface/interface/: main.py
message-bus/: Makefile
services/: cot.service  cot.timer  lochaufwallstrasse.de  produce.service  produce.timer  stock-monitor-backend.service  stock-monitor-monitor.service
stock-monitor-backend/: 2  pyproject.toml
stock-monitor-backend/stock_monitor_backend/: __init__.py  math.py  models.py  monitor.py  notifyer.py  position_sizing.py  rules.py  server.py  telegram.py  utils.py  wave.py
stock-monitor-backend/stock_monitor_backend/telegram/: __init__.py  client.py
stock-monitor-backend/stock_monitor_backend/wave/: __init__.py  common.py  cot.py  ideas.py  portfolio.py  report.py
stock-monitor-backend/tests/: test_math.py  test_notifyer.py
stock-monitor-backend/tests/data/: cot.palladium.pkl  gold.cot.pkl  goog.history.pkl
stock-monitor-bot/: pyproject.toml
stock-monitor-bot/stock_monitor_bot/: config.yml  credentials.yml  domain.yml  endpoints.yml
stock-monitor-bot/stock_monitor_bot/actions/: actions.py
stock-monitor-bot/stock_monitor_bot/data/: rules.yml
stock-monitor-data/: 2  pyproject.toml  yfinance.cache
stock-monitor-data/stock_monitor_data/: __init__.py  arbitrages.py  cryptos.py  data.py  etfs.py  ideas.py  models.py  oil_and_gas.py  portfolio.py
stock-monitor-data/tests/: test_models.py
yfinance-client/: Dockerfile  pyproject.toml
yfinance-client/yfinance_client/: __main__.py  downloader.py  main.py
