[tool.poetry]
name = "calculator"
version = "0.1.0"
description = ""
authors = ["Danila <ddbihbka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.5.2"
bytewax = "^0.16.2"
confluent-kafka = "^2.2.0"

[tool.poetry.scripts]
raw = "calculator.main:main"

[tool.poetry.group.dev.dependencies]
pytest-datadir = "^1.4.1"
pandas = "^2.0.3"
yfinance = "^0.2.28"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
