[tool.poetry]
name = "etl"
version = "0.1.0"
description = ""
authors = ["Danila <ddbihbka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.11"
bytewax = {extras = ["kafka"], version = "^0.17.1"}
psycopg = {extras = ["binary"], version = "^3.1.11"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
