[tool.poetry]
name = "etl"
version = "0.1.0"
description = ""
authors = ["Danila <ddbihbka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.11"
bytewax = {extras = ["kafka"], version = "^0.17.1"}
psycopg = {extras = ["binary"], version = "^3.1.11"}
pydantic = "^2.3.0"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
