[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["Danila <ddbihbka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.27.0"
sqlalchemy = "^2.0.21"
psycopg2-binary = "^2.9.7"
numerize = "^0.12"
altair = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
