[tool.poetry]
name = "interface"
version = "0.1.0"
description = ""
authors = ["Danila <ddbihbka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.25.0"
matplotlib = "^3.7.2"
mplfinance = "^0.12.10b0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
