[tool.poetry]
name = "stock-monitor-backend"
version = "0.1.0"
description = ""
authors = ["d61h6k4 <ddbihbka@gmail.com>"]
readme = "README.md"
packages = [{include = "stock_monitor_backend"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
fastapi = "^0.97.0"
uvicorn = {version = "^0.21.1", extras = ["standard"]}
structlog = "^22.3.0"
requests = "^2.28.2"
requests-cache = "^1.0.1"
requests-ratelimiter = "^0.4.0"
pandas = "^2.0.2"
yfinance = "^0.2.12"
xlrd = "^2.0.1"
jinja2 = "^3.1.2"
h2o-lightwave = {extras = ["web"], version = "^0.25.2"}
websockets = "^11.0.1"
# requests-cache fails
urllib3 = "<2"
pyportfolioopt = "^1.5.5"
stock-monitor-data = {path = "../stock-monitor-data"}
tqdm = "^4.65.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.257"
pytest = "^7.2.2"
pytest-datadir = "^1.4.1"


[tool.poetry.scripts]
serve = "stock_monitor_backend.server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
  "E",   # pycodestyle
  "W",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
  "D",   # pydocstyle
  "I",   # isort
  "ANN", # flake8-annotations
  "EM",  # flake8-errmsg
  "PT",  # flake8-pytest-style
  "SIM", # flake8-simplify
  "TID", # flake8-tidy-imports
  "TCH", # flake8-type-checking
  "ARG", # flake8-unused-arguments
  "PL",  # pylint
  "PLR", # refactor
  "PLW", # warnings
  "TRY",
  "NPY", # numpy specific
  "RUF",
]
line-length = 120

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
