[tool.poetry]
name = "stock-monitor-bot"
version = "0.1.0"
description = ""
authors = ["d61h6k4 <ddbihbka@gmail.com>"]
readme = "README.md"
packages = [{include = "stock_monitor_bot"}]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
rasa = "^3.4.6"
rasa-sdk = "^3.4.6"
structlog = "^22.3.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.257"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
  "E",   # pycodestyle
  "W",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
  "D",   # pydocstyle
  "I",   # isort
  "ANN", # flake8-annotations
  "EM",  # flake8-errmsg
  "PT",  # flake8-pytest-style
  "SIM", # flake8-simplify
  "TID", # flake8-tidy-imports
  "TCH", # flake8-type-checking
  "ARG", # flake8-unused-arguments
  "PL",  # pylint
  "PLR", # refactor
  "PLW", # warnings
  "TRY",
  "NPY", # numpy specific
  "RUF",
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
