[tool.poetry]
name = "stock-monitor-data"
version = "0.1.12"
description = ""
authors = ["d61h6k4 <ddbihbka@gmail.com>"]
readme = "README.md"
packages = [{include = "stock_monitor_data"}]

[tool.poetry.dependencies]
python = ">=3.10,<4"
pandas = "^2.0.2"
pydantic = "^1.10.9"
requests = "^2.31.0"
requests-cache = "^1.0.1"
requests-ratelimiter = "^0.4.0"
yfinance = "^0.2.20"
tqdm = "^4.65.0"
xlrd = "^2.0.1"
urllib3 = "<2.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.272"
pytest = "^7.4.0"

[tool.poetry.scripts]
monitor = "stock_monitor_data.bin.monitor:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.ruff]
select = [
  "E",   # pycodestyle
  "W",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
  "D",   # pydocstyle
  "I",   # isort
  "ANN", # flake8-annotations
  "EM",  # flake8-errmsg
  "PT",  # flake8-pytest-style
  "SIM", # flake8-simplify
  "TID", # flake8-tidy-imports
  "TCH", # flake8-type-checking
  "ARG", # flake8-unused-arguments
  "PL",  # pylint
  "PLR", # refactor
  "PLW", # warnings
  "TRY",
  "NPY", # numpy specific
  "RUF",
]
line-length = 120

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
